--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
     <link rel="stylesheet" href="global.css">
     <link rel="stylesheet" href="style.css">
 </head>
-<header></header>
+<header>
+
+</header>
 <body>
+    <template>
+        <li>To do</li>
+    </template>
     
 </body>
 </html>
