--- a/index.html
+++ b/index.html
@@ -1,19 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="da">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TO DO APP</title>
-    <link rel="stylesheet" href="global.css">
-    <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>ToDo App</title>
 </head>
-<header>
-
-</header>
 <body>
-    <template>
-        <li>To do</li>
-    </template>
-    
+<div id="app">
+    <header>
+        <h1>ToDo App</h1>
+    </header>
+    <form id="new-task-form">
+        <input type="text" id="task-input" placeholder="Tilføj ny opgave..." required />
+        <input type="number" id="quantity-input" placeholder="Antal" required />
+        <button type="submit">Tilføj Opgave</button>
+    </form>
+    <ul id="task-list">
+        <!-- Opgaverne vil blive tilføjet her -->
+    </ul>
+    <h2>Færdige Opgaver</h2>
+    <ul id="completed-tasks">
+        <!-- Færdige opgaver vil blive vist her -->
+    </ul>
+</div>
+
+<template id="task-template">
+    <li class="task">
+        <span class="task-name"></span>
+        <span class="task-quantity"></span>
+        <button class="done-button">Færdig</button>
+        <button class="delete-button">Slet</button>
+    </li>
+</template>
+
+<script src="app.js"></script>
 </body>
 </html>
