--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>ToDo App</title>
+<title>APP</title>
 <link rel="stylesheet" href="style.css">
-<link rel="stylesheet" href="global.css">
 </head>
 
 <body>
