--- a/index.html
+++ b/index.html
@@ -1,21 +1,28 @@
 <!DOCTYPE html>
 <html lang="da">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>APP</title>
-<link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ToDo App</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-<div id="app">
-    <header>
-        <h1>ToDo App</h1>
-    </header>
-    <form id="new-task-form">
-        <input type="text" id="task-input" placeholder="Tilføj ny opgave..." required />
-        <button type="submit">Tilføj Opgave</button>
-    </form>
+    <div id="header">
+        <div class="flexrow-container">
+            <div class="standard-theme theme-selector"></div>
+            <div class="light-theme theme-selector"></div>
+            <div class="darker-theme theme-selector"></div>
+        </div>
+        <h1 id="title">To Do App<div id="border"></div></h1>
+    </div>
+
+    <div id="form">
+        <form id="new-task-form">
+            <input id="task-input" class="todo-input" type="text" placeholder="Add a task.">
+            <button class="todo-btn" type="submit">I Got This!</button>
+        </form>
+    </div>
+
     <ul id="task-list">
         <!-- Opgaverne vil blive tilføjet her -->
     </ul>
@@ -23,16 +30,17 @@
     <ul id="completed-tasks">
         <!-- Færdige opgaver vil blive vist her -->
     </ul>
-</div>
-
-<template id="task-template">
-    <li class="task">
-        <span class="task-name"></span>
-        <button class="done-button">Færdig</button>
-        <button class="delete-button">Slet</button>
-    </li>
-</template>
-
-<script src="index.js"></script>
+    
+    <template id="task-template">
+        <li class="task">
+            <span class="task-name"></span>
+            <button class="done-button">Færdig</button>
+            <button class="delete-button">Slet</button>
+        </li>
+    </template>
+    <script src="index.js"></script>
 </body>
+<footer>
+                <img src="./assets/logo1.svg" alt="Logo" style="height: 200px; width: auto;">
+</footer>
 </html>
