--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <h1 id="title">To Do App<div id="border"></div></h1>
     </div>
 
-    <div id="form">
-        <form id="new-task-form">
+        <div id="form">
+            <form>
             <input id="task-input" class="todo-input" type="text" placeholder="Add a task.">
             <button class="todo-btn" type="submit">I Got This!</button>
         </form>
