--- a/index.html
+++ b/index.html
@@ -15,26 +15,26 @@
             <div class="light-theme theme-selector"></div>
             <div class="darker-theme theme-selector"></div>
         </div>
-        <h1 id="title">Hvad skal du nå i dag?<div id="border"></div>
+        <h1 id="title">TO DO<div id="border"></div>
         </h1>
     </div>
 
     <div id="form">
         <form>
-            <input id="task-input" class="todo-input" type="text" placeholder="Add a task.">
-            <button class="todo-btn" type="submit">Tilføj opgave</button>
+            <input id="task-input" class="todo-input" type="text" placeholder="Hvad skal du ordne?">
+            <button class="todo-btn" type="submit">Tilføj</button>
         </form>
     </div>
 
     <div class="task-container">
         <div class="ongoing-tasks">
-            <h2>To Do Liste</h2>
+            <h2>Opgaver</h2>
             <ul id="task-list">
                 <!-- Opgaverne vil blive tilføjet her -->
             </ul>
         </div>
         <div class="completed-tasks">
-            <h2>Færdige Opgaver</h2>
+            <h2>Færdige opgaver</h2>
             <ul id="completed-tasks">
                 <!-- Færdige opgaver vil blive vist her -->
             </ul>
@@ -52,8 +52,5 @@
     </template>
     <script src="index.js"></script>
 </body>
-<footer>
-    <img src="./assets/logo1.svg" alt="Logo" style="height: 100px; width: auto;">
-</footer>
 
 </html>
